# http_req

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: examples.yml  rust.yml
examples/: add_headers.rs  get.rs  get_https.rs  head.rs  head_https.rs  post.rs  post_https.rs  request_builder_get.rs
src/: chunked.rs  lib.rs  request.rs  response.rs  sslwrapper.rs  tls.rs  uri.rs
tests/: server.py
