[package]
name = "http_req_wasi"
version = "0.10.0"
license = "MIT"
description = "HTTP client for the WasmEdge network socket API. Derived from the http_req library."
repository = "https://github.com/second-state/wasmedge_http_req"
authors = ["chensiheng", "jayjamesjay"]
readme = "README.md"
categories = ["web-programming::http-client", "network-programming"]
keywords = ["http", "client", "request", "wasmedge", "webassembly"]
edition = "2018"

[dependencies]
unicase = "^2.6"
wasmedge_wasi_socket = "0.4.1"

[features]
default = ["wasmedge_ssl"]
wasmedge_ssl = []