[package]
name = "http_req_wasi"
version = "0.10.1"
license = "MIT"
description = "HTTP client for the WasmEdge network socket API. Derived from the http_req library."
repository = "https://github.com/second-state/http_req"
authors = ["chensiheng", "jayjamesjay"]
readme = "README.md"
categories = ["web-programming::http-client", "network-programming"]
keywords = ["http", "https", "client", "wasmedge", "webassembly"]
edition = "2018"

[lib]
name = "http_req"
path = "src/lib.rs"

[dependencies]
unicase = "^2.6"
wasmedge_wasi_socket = "0.4.2"

[features]
default = ["wasmedge_ssl"]
wasmedge_ssl = []
