[package]
name = "http_req_wasi"
version = "0.11.1"
license = "MIT"
description = "HTTP client for the WasmEdge network socket API. Derived from the http_req library."
repository = "https://github.com/second-state/http_req"
authors = ["chensiheng", "jayjamesjay"]
readme = "README.md"
categories = ["web-programming::http-client", "network-programming"]
keywords = ["http", "https", "client", "wasmedge", "webassembly"]
edition = "2018"

[lib]
name = "http_req"
path = "src/lib.rs"

[dependencies]
unicase = "^2.6"
wasmedge_wasi_socket = "0.5.0"
wasmedge_rustls_api = { version = "0.1.0", optional = true }

[features]
default = ["wasmedge_rustls"]
wasmedge_rustls = ["wasmedge_rustls_api"]
